# rust-fish-server

./: .gitignore  Cargo.toml  compile.bat
.cargo/: config.toml
creates/lib-core/: Cargo.toml
creates/lib-core/src/: lib.rs
creates/lib-core/src/database/: mod.rs
creates/lib-core/src/error/: error.rs
creates/lib-core/src/jwt/: mod.rs
creates/lib-core/src/middleware/: dynamic.rs  verification_token.rs
creates/lib-entity/: Cargo.toml
creates/lib-entity/src/mysql/: app_user.rs  mod.rs  prelude.rs  sys_user.rs
creates/lib-utils/: Cargo.toml
creates/lib-utils/src/: lib.rs
creates/lib-utils/src/password/: mod.rs
creates/lib-utils/src/result/: mod.rs  request_entity.rs
services/admin/: Cargo.toml
services/admin/examples/: password.rs
services/admin/src/: app_state.rs  lib.rs  main.rs
services/admin/src/api/auth/: entity.rs  mod.rs  service.rs
services/server/: Cargo.toml
services/server/src/: lib.rs  main.rs
services/server/src/api/: mod.rs
services/server/src/api/fish_record/: entity.rs  mod.rs  service.rs
services/server/src/api/user/: entity.rs  mod.rs  service.rs
src/: error.rs  lib.rs  main.rs
src/api/fish_record/: entity.rs  service.rs
src/core/: mod.rs
src/core/jwt/: mod.rs
src/core/middleware/: verification_token.rs
src/entity/mysql/: fish_record.rs
src/utils/: mod.rs
src/utils/result/: mod.rs
