[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-utils = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
sonyflake = { workspace = true }
anyhow = { workspace = true }
hmac = { workspace = true }
jwt = { workspace = true }
sha2 = { workspace = true }
derive_builder = { workspace = true }
