[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
argon2 = { workspace = true }
tracing = "0.1.41"
