[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-core = { workspace = true }
lib-entity = { workspace = true }
lib-utils = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
